--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.10.0",
     "expo": "~53.0.9",
     "expo-status-bar": "~2.2.3",
+    "moment": "^2.30.1",
     "react": "19.0.0",
     "react-native": "0.79.2",
     "react-native-vector-icons": "^10.2.0"
